Day 59 : Conditional Rendering Practice

--- a/force-app/main/default/lwc/practice6/practice6.html
+++ b/force-app/main/default/lwc/practice6/practice6.html
@@ -25,8 +25,8 @@
         ></lightning-input>
 
         <p>Hired checkbox checked : {hired} </p>
-        <p>Hired checkbox checked : {graduated} </p>
-        <p>Hired checkbox checked : {promoted} </p>
+        <p>Graduated checkbox checked : {graduated} </p>
+        <p>Promoted checkbox checked : {promoted} </p>
 
 
       </div>
