--- a/force-app/main/default/lwc/practice7/practice7.html
+++ b/force-app/main/default/lwc/practice7/practice7.html
@@ -1,10 +1,26 @@
 <template>
-    <lightning-card title="Toggle Practice" icon-name="standard:toggle">
-      <div class="slds-var-m-around_medium">
+  <lightning-card title="Toggle Practice" icon-name="standard:toggle">
+    <div class="slds-var-m-around_medium">
 
-        
+      <lightning-input 
+          type="toggle" 
+          label={theLabel}
+          checked={on}
+          onchange={handleToggleChange}
+      ></lightning-input>   
 
-      </div>
-    </lightning-card>
-  </template>
-  
+      <!-- Conditional displaying element 
+      using lwc:if directive inside <template> tag -->
+
+      <!-- WHEN I CLICK ON "ON" BUTTON ; SHOWN THIS MESSAGE -->
+      <template lwc:if={on}>
+          <p> This should show when the switch is on </p>
+      </template>
+      
+      <template lwc:else>
+        <p> This should show when the switch is off </p>
+      </template>
+
+    </div>
+  </lightning-card>
+</template>
