Day 59: render list practice

--- a/force-app/main/default/lwc/practice10/practice10.html
+++ b/force-app/main/default/lwc/practice10/practice10.html
@@ -1,3 +1,28 @@
 <template>
-    
-</template>
+    <lightning-card title="Practice 10 - ForEach" icon-name="utility:loop">
+      <div class="slds-var-m-around_medium">
+        
+        <ul>
+            <template for:each={foodArray} for:item="each">
+                <!-- Right at the first line after declaring forEach directive
+                the first element must have an attribute called key and value as unique value -->
+               <li key={each.Id}>
+                   The name : {each.foodName} | Calorie is : {each.calories}
+               </li>
+            </template>
+
+        </ul>
+
+        <!-- <ul>
+            <li>item 1</li>
+            <li>item 2</li>
+            <li>item 3</li>
+            <li>item 4</li>
+            <li>item 5</li>
+        </ul> -->
+
+
+      </div>
+  
+    </lightning-card>
+  </template>
